--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.1",
+    "graphql": "^16.3.0",
+    "gsap": "^3.10.2",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-confetti": "^6.0.1",
+    "react-dom": "18.0.0",
+    "react-gsap": "^3.2.1",
+    "react-redux": "^7.2.8",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.12.0",
