--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-confetti": "^6.0.1",
     "react-dom": "18.0.0",
     "react-gsap": "^3.2.1",
+    "react-loading": "^2.0.3",
+    "react-loading-skeleton": "^3.0.3",
     "react-redux": "^7.2.8",
     "styled-components": "^5.3.5"
   },
